--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fastdl_xz_server"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,6 +10,9 @@ rouille = {version = "*",  default-features = false }
 xz2 = "*"
 toml = "*"
 serde = { version = "*", features = ["derive"] }
+
+[features]
+filtering = []
 
 [profile.release]
 codegen-units = 1
