--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rouille = {version = "*",  default-features = false }
-xz2 = "*"
-toml = "*"
-serde = { version = "*", features = ["derive"] }
+rouille = { version = "3.5",  default-features = false }
+xz2 = "0.1"
+toml = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+log = "0.4"
+env_logger = "0.9"
+systemd-journal-logger = "0.5"
 
 [features]
 filtering = []
